fix: make highlight-box text visible in dark mode

--- a/layouts/css/layout/_dark-theme.scss
+++ b/layouts/css/layout/_dark-theme.scss
@@ -82,6 +82,7 @@
     }
 
     .highlight-box {
+      color: $light-gray3;
       background-color: $dark-code-background;
     }
   }
